Fix line item editor description collapsed height and show button to expand/collapse section only if fewer than 200 chars

--- a/src/styles/components/_LineItemEditor.scss
+++ b/src/styles/components/_LineItemEditor.scss
@@ -23,7 +23,7 @@ $confirm-buttons-height: 5.625rem;
   &__description-container {
     &--collapsed {
       .LineItemEditor__description {
-        height: 6rem;
+        max-height: 6rem;
         overflow: hidden;
       }
 
